<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_visitUs"
            android:icon="@drawable/browser_icon"
            android:title="@string/visit_us" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/write_us" />
        </menu>
    </item>

    <item android:title="@string/language">
        <menu>
            <item
                android:id="@+id/gu_language"
                android:icon="@drawable/translator_icon"
                android:title="@string/gujarati" />

            <item
                android:id="@+id/hi_language"
                android:icon="@drawable/translator_icon"
                android:title="@string/hindi" />
        </menu>

    </item>

</menu>
