<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.example.krishnapandey.tabbedexample.Setting">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_text_size"
        android:layout_marginLeft="64dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/font_size_icon_42_42"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/textViewSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:textStyle="normal"
            android:textAlignment="textEnd"/>

    </LinearLayout>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTintMode="multiply"
        android:background="@android:drawable/btn_dropdown"
        android:layout_below="@+id/linearLayout"
        android:spinnerMode="dropdown"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mail_icon"/>
        <Button
            android:id="@+id/writeToDevAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_to_developer"
            android:gravity="center_vertical"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>


    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/done"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
</RelativeLayout>
